--- a/package.json
+++ b/package.json
@@ -1,21 +1,10 @@
 {
   "name": "solidity-learning",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.1",
+    "dotenv": "^16.0.3",
+    "hardhat": "^2.12.6"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/happylolonly/solidity-learning.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/happylolonly/solidity-learning/issues"
-  },
-  "homepage": "https://github.com/happylolonly/solidity-learning#readme",
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.1"
   }
